# social_media_api

./: .dockerignore  Dockerfile  README  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
api/: models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_comment_created_at_alter_post_created_at_and_more.py
social_media_api/: settings.py  urls.py
